# GoblinCamp

./: BUILD.using_cmake  BUILD.using_cmake.md  CMakeLists.txt  README.md  Readme.md
CMakeModules/: CPM.cmake
Documentation/: build-readme.html  dev-guide.html  dev-guide.rst
Goblin Camp/: CMakeLists.txt  Readme.txt  goblin-camp.desktop
Goblin Camp/include/: Logger.hpp
Goblin Camp/include/scripting/: Engine.hpp
Goblin Camp/include/tileRenderer/: Sprite.hpp
Goblin Camp/include/tileRenderer/ogl/: OGLTilesetRenderer.hpp
Goblin Camp/lib/: CMakeLists.txt
Goblin Camp/src/: Camp.cpp  Farmplot.cpp  Game.cpp  Logger.cpp  Version.cpp
Goblin Camp/src/data/: Config.cpp  Paths.cpp
Goblin Camp/src/platform/linux/: DataImpl.cpp
Goblin Camp/src/scripting/: Engine.cpp
Goblin Camp/src/tileRenderer/ogl/: OGLResources.cpp
Include/: Announce.hpp  Blood.hpp  Camp.hpp  Construction.hpp  ConstructionVisitor.hpp  Container.hpp  Entity.hpp  Events.hpp  Faction.hpp  Farmplot.hpp  Filth.hpp  Fire.hpp  GCamp.hpp  Game.hpp  Item.hpp  Job.hpp  JobManager.hpp  Logger.hpp  Map.hpp  MapMarker.hpp  MapRenderer.hpp  NPC.hpp  NatureObject.hpp  Random.hpp  SpawningPool.hpp  Spell.hpp  Squad.hpp  StockManager.hpp  Stockpile.hpp  Tile.hpp  Trap.hpp  UI.hpp  Water.hpp  Weather.hpp  stdafx.hpp
Include/UI/: AnnounceDialog.hpp  Button.hpp  ConstructionDialog.hpp  DevConsole.hpp  Dialog.hpp  Frame.hpp  Grid.hpp  JobDialog.hpp  Label.hpp  Menu.hpp  MessageBox.hpp  NPCDialog.hpp  ScrollPanel.hpp  SideBar.hpp  Spinner.hpp  SquadsDialog.hpp  StockManagerDialog.hpp  TextBox.hpp  Tooltip.hpp  UIComponents.hpp  UIList.hpp
Include/data/: Config.hpp  Data.hpp  Paths.hpp  Serialization.hpp  Tilesets.hpp
Include/scripting/: Event.hpp
Include/tileRenderer/: ConstructionSprite.hpp  ItemSprite.hpp  NPCSprite.hpp  PermutationTable.hpp  Sprite.hpp  SpriteSetFactories.hpp  TileSet.hpp  (+7 more)
Source/: Announce.cpp  Blood.cpp  CMakeLists.txt  Camp.cpp  Construction.cpp  Container.cpp  Coordinate.cpp  Door.cpp  Entity.cpp  Events.cpp  Faction.cpp  Farmplot.cpp  Filth.cpp  Fire.cpp  GCamp.cpp  Game.cpp  Item.cpp  Job.cpp  JobManager.cpp  KuhnMunkres.cpp  Logger.cpp  Map.cpp  MapMarker.cpp  NPC.cpp  NatureObject.cpp  Random.cpp  SpawningPool.cpp  Spell.cpp  Squad.cpp  StockManager.cpp  Stockpile.cpp  TCODMapRenderer.cpp  Tile.cpp  Trap.cpp  UI.cpp  Version.cpp  Version.cpp_in  Water.cpp  Weather.cpp
Source/Config/: CMakeLists.txt  Config.cpp  Data.cpp  Mods.cpp  Paths.cpp  Serialization.cpp  Tilesets.cpp  WindowConfig.cpp
Source/Eden/: CMakeLists.txt  Map.cpp  MapMarker.cpp  MapRenderer.cpp  NatureObject.cpp
Source/Entity/: CMakeLists.txt  Container.cpp  Entity.cpp  Item.cpp  NPC.cpp  Tile.cpp
Source/Geometry/: CMakeLists.txt  Coordinate.cpp
Source/Graphics/: CMakeLists.txt  TCODMapRenderer.cpp  UI.cpp
Source/Graphics/Tile/: CMakeLists.txt  ConstructionSprite.cpp  DrawConstructionVisitor.cpp  ItemSprite.cpp  NPCSprite.cpp  NatureObjectSpriteSet.cpp  PermutationTable.cpp  SpellSpriteSet.cpp  Sprite.cpp  SpriteSetFactories.cpp  StatusEffectSprite.cpp  TerrainSprite.cpp  TileSet.cpp  TileSetLoader.cpp  TileSetRenderer.cpp  TileSetTexture.cpp  TilesetParserV1.cpp  TilesetParserV2.cpp
Source/Graphics/Tile/OGL/: OGLFunctionExt.cpp  OGLResources.cpp  OGLSprite.cpp  OGLTilesetRenderer.cpp  OGLViewportLayer.cpp
Source/Graphics/Tile/SDL/: SDLSprite.cpp  SDLTilesetRenderer.cpp
Source/Log/: CMakeLists.txt  Logger.cpp
Source/Math/: CMakeLists.txt  Random.cpp
Source/Mechanism/: Attack.cpp  Blood.cpp  CMakeLists.txt  Camp.cpp  Construction.cpp  Door.cpp  Events.cpp  Faction.cpp  Farmplot.cpp  Filth.cpp  Fire.cpp  SpawningPool.cpp  Spell.cpp  Squad.cpp  Stats.cpp  StatusEffect.cpp  StockManager.cpp  Stockpile.cpp  Trap.cpp  Water.cpp  Weather.cpp
Source/Platform/: CMakeLists.txt  dummy.txt
Source/Platform/osx/: DataImpl.cpp
Source/Platform/windows/: CommandLine.cpp  CrashHandler.cpp  DataImpl.cpp  DebugImpl.cpp  TSSCleanup.cpp  main.cpp
Source/Screen/: StatisticsDisplay.cpp
Source/Scripting/: API.cpp  CMakeLists.txt  Engine.cpp  Event.cpp
Source/Scripting/API/: Functions.cpp  LoggerStream.cpp  PyConstruction.cpp  PyItem.cpp
Source/Task/: CMakeLists.txt  Job.cpp  JobManager.cpp  KuhnMunkres.cpp  Task.cpp
Source/UI/: AnnounceDialog.cpp  CMakeLists.txt  ConstructionDialog.cpp  DevConsole.cpp  JobDialog.cpp  Menu.cpp  MessageBox.cpp  NPCDialog.cpp  SideBar.cpp  SquadsDialog.cpp  StockManagerDialog.cpp  Tooltip.cpp  UIComponents.cpp
Source/User/: CMakeLists.txt
Source/User/Interface/: Announce.cpp  AnnounceDialog.cpp  Button.cpp  ConstructionDialog.cpp  DevConsole.cpp  Dialog.cpp  Drawable.cpp  Frame.cpp  Grid.cpp  JobDialog.cpp  Label.cpp  Menu.cpp  MessageBox.cpp  NPCDialog.cpp  Panel.cpp  ScrollPanel.cpp  SideBar.cpp  Spinner.cpp  SquadsDialog.cpp  StockManagerDialog.cpp  TextBox.cpp  Tooltip.cpp  UIComponents.cpp  UIContainer.cpp
Source/Util/: CMakeLists.txt  GCamp.cpp  Game.cpp  Statistics.cpp
Source/data/: CMakeLists.txt  Config.cpp  Data.cpp  Mods.cpp  Paths.cpp  Serialization.cpp  Tilesets.cpp
Source/platform/linux/: DataImpl.cpp
Source/platform/osx/: DataImpl.cpp
Source/platform/unix/: main.cpp
Source/platform/windows/: CommandLine.cpp  CrashHandler.cpp  DataImpl.cpp  DebugImpl.cpp
Source/scripting/: API.cpp  CMakeLists.txt  Engine.cpp  Event.cpp
Source/scripting/_gcampapi/: Functions.cpp  LoggerStream.cpp  PyConstruction.cpp  PyItem.cpp
Source/tileRenderer/: CMakeLists.txt  ConstructionSprite.cpp  DrawConstructionVisitor.cpp  NPCSprite.cpp  NatureObjectSpriteSet.cpp  SpellSpriteSet.cpp  Sprite.cpp  SpriteSetFactories.cpp  TileSet.cpp  TileSetLoader.cpp  TileSetRenderer.cpp  TileSetTexture.cpp  TilesetParserV1.cpp  TilesetParserV2.cpp
Source/tileRenderer/ogl/: OGLFunctionExt.cpp  OGLResources.cpp  OGLSprite.cpp  OGLTilesetRenderer.cpp  OGLViewportLayer.cpp
Source/tileRenderer/sdl/: SDLSprite.cpp  SDLTilesetRenderer.cpp
Test/: CMakeLists.txt
Test/Mock/FakeIt/: CMakeLists.txt
Test/Mock/FakeIt/Include/FakeIt/: FakeIt.hpp
Test/Unit/: CMakeLists.txt  TestCoordinate.cpp
(+119 files in other folders)
