ADD_SUBDIRECTORY(Config/)
ADD_SUBDIRECTORY(Eden/)
ADD_SUBDIRECTORY(Entity/)
ADD_SUBDIRECTORY(Geometry/)
ADD_SUBDIRECTORY(Graphics/)
ADD_SUBDIRECTORY(Log/)
ADD_SUBDIRECTORY(Math/)
ADD_SUBDIRECTORY(Mechanism/)
ADD_SUBDIRECTORY(Platform/)
ADD_SUBDIRECTORY(Scripting/)
ADD_SUBDIRECTORY(Task/)
ADD_SUBDIRECTORY(User/)
ADD_SUBDIRECTORY(Util/)

ADD_EXECUTABLE(Goblin.App Platform/unix/main.cpp Util/GCamp.cpp)

TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::User::Interface)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Renderer::Tile)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Scripting)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Libtcod)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Data)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Main)

TARGET_LINK_LIBRARIES(Goblin.App PRIVATE
        ${SDL_LIBRARY}
        ${SDLIMAGE_LIBRARY}
        ${PYTHON_LIBRARIES}
        ${Boost_THREAD_LIBRARY}
        ${Boost_SYSTEM_LIBRARY}
        ${Boost_FILESYSTEM_LIBRARY}
        ${Boost_SERIALIZATION_LIBRARY}
        ${Boost_PYTHON_LIBRARY}
        ${Boost_IOSTREAMS_LIBRARY}
        ${ZLIB_LIBRARIES}
        ${OPENGL_LIBRARIES}
        ${PNG_LIBRARY}
        )

FILE(COPY ${GOBLIN_CAMP_ROOT_DIR}/Library/ DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/share/games/goblin-camp/lib/)

