ADD_SUBDIRECTORY(Config/)
ADD_SUBDIRECTORY(Eden/)
ADD_SUBDIRECTORY(Entity/)
ADD_SUBDIRECTORY(Geometry/)
ADD_SUBDIRECTORY(User/)
ADD_SUBDIRECTORY(Graphics/)
ADD_SUBDIRECTORY(Log/)
ADD_SUBDIRECTORY(Math/)
ADD_SUBDIRECTORY(Mechanism/)
ADD_SUBDIRECTORY(Platform/)
ADD_SUBDIRECTORY(Scripting/)
ADD_SUBDIRECTORY(Task/)
ADD_SUBDIRECTORY(Util/)

ADD_EXECUTABLE(Goblin.App Platform/unix/main.cpp)
SET_TARGET_PROPERTIES(Goblin.App PROPERTIES CXX_STANDARD 17)
# Move the main binary (executable) for that it can be found the directories need.
SET_TARGET_PROPERTIES(Goblin.App PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::User::Interface)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Renderer::Tile)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Scripting)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Libtcod)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Configuration)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Eden)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Entity)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin::Geometry)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Graphics)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Log)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Math)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Mechanism)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Platform)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Scripting)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Task)
TARGET_LINK_LIBRARIES(Goblin.App PUBLIC Goblin.Util)

TARGET_LINK_LIBRARIES(Goblin.App PRIVATE
        ${SDL_LIBRARY}
        ${SDLIMAGE_LIBRARY}
        ${PYTHON_LIBRARIES}
        ${Boost_THREAD_LIBRARY}
        ${Boost_SYSTEM_LIBRARY}
        ${Boost_FILESYSTEM_LIBRARY}
        ${Boost_SERIALIZATION_LIBRARY}
        ${Boost_PYTHON_LIBRARY}
        ${Boost_IOSTREAMS_LIBRARY}
        ${ZLIB_LIBRARIES}
        ${OPENGL_LIBRARIES}
        ${PNG_LIBRARY}
        )

FILE(COPY ${GOBLIN_CAMP_ROOT_DIR}/Library/ DESTINATION ${GOBLIN_CAMP_ROOT_DIR}/share/games/goblin-camp/lib/)

