ADD_LIBRARY(Goblin.Geometry STATIC Coordinate.cpp)
ADD_LIBRARY(Goblin::Geometry ALIAS Goblin.Geometry)
SET_TARGET_PROPERTIES(Goblin.Geometry PROPERTIES CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(Goblin.Geometry PRIVATE ${Boost_SERIALIZATION_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(Goblin.Geometry PUBLIC $<BUILD_INTERFACE:${GOBLIN_CAMP_ROOT_DIR}/Include/>)